--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body class="content-grid">
 <header class="sidebar">
-    <h1>[<span>senti</span>FEED]</h1>
+    <h1><span>senti</span>FEED</h1>
 <nav class="flex">
 <div class="main-nav-container flex">
     <button data-target="sentiment">sentiment</button>
