modal & sent rates
it werks!

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>[<span>senti</span>FEED]</h1>
 
     <nav>
-        <form id="myForm" class="nav-container flex">
+        <form id="navForm" class="nav-container flex">
             <div class="main-nav-container">
                 <h3 class="button main-button" data-target="sentiment">Sentiment</h3>
     
@@ -68,21 +68,13 @@
 <div id="articleModal" class="modal">
     <div class="modal-content card">
         <!-- Content will be populated dynamically -->
-      <!-- <div class="rating-container flex">
-      <button class="rate-button"></button>
-        <div class="circle-button-container flex">
-            <button class="circle-button primary"></button>
-            <button class="circle-button neutral"></button>
-            <button class="circle-button negative"></button>
-            <button class="circle-button very-negative"></button>
-        </div>
-        </div>      -->
     </div>
 </div>
 <main> 
 <div class="card-container content">
-         
+        <!-- Content will be populated dynamically -->
 
+</div>
 
 </main>
 
